--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,20 +4,35 @@
 # https://aka.ms/yaml
 
 jobs:
-- 
+- job: Linux
+  pool:
+    vmImage: "ubuntu-16.04"
+  steps:
+  - task: CMake@1
+    inputs:
+      cmakeArgs: "$(Build.SourceDirectory)"
+  - task: CMake@1
+    inputs:
+      cmakeArgs: "--build ."
 
-pool:
-  vmImage: 'Ubuntu 16.04'
+- job: Windows
+  pool:
+    vmImage: "vs2017-win2016"
+  steps:
+  - task: CMake@1
+    inputs:
+      cmakeArgs: "$(Build.SourceDirectory)"
+  - task: CMake@1
+    inputs:
+      cmakeArgs: "--build ."
 
-steps:
-- task: CMake@1
-  inputs:
-    cmakeArgs: "$(Build.SourceDirectory)"
-- task: CMake@1
-  inputs:
-    cmakeArgs: "--build ."
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- job: macOS
+  pool:
+    vmImage: "macOS-10.13"
+  steps:
+  - task: CMake@1
+    inputs:
+      cmakeArgs: "$(Build.SourceDirectory)"
+  - task: CMake@1
+    inputs:
+      cmakeArgs: "--build ."
