--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ jobs:
   steps:
   - task: CMake@1
     inputs:
-      cmakeArgs: $(Build.SourceDirectory)
+      cmakeArgs: ".."
   - task: CMake@1
     inputs:
       cmakeArgs: "--build ."
@@ -21,7 +21,7 @@ jobs:
   steps:
   - task: CMake@1
     inputs:
-      cmakeArgs: $(Build.SourceDirectory)
+      cmakeArgs: ".."
   - task: CMake@1
     inputs:
       cmakeArgs: "--build ."
@@ -32,7 +32,7 @@ jobs:
   steps:
   - task: CMake@1
     inputs:
-      cmakeArgs: $(Build.SourceDirectory)
+      cmakeArgs: ".."
   - task: CMake@1
     inputs:
       cmakeArgs: "--build ."
