--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,7 @@ jobs:
   pool:
     vmImage: "ubuntu-16.04"
   steps:
+  - script: sudo apt-get install -y uuid-dev
   - task: CMake@1
     inputs:
       cmakeArgs: ".."
