--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,10 @@ jobs:
   pool:
     vmImage: "ubuntu-16.04"
   steps:
-  - script: sudo apt-get install -y uuid-dev
+  - script: |
+    sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+    sudo apt-get update
+    sudo apt-get install -y gcc-7 g++-7 uuid-dev
   - task: CMake@1
     inputs:
       cmakeArgs: ".."
