--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ jobs:
       sudo apt-get install -y gcc-7 g++-7 uuid-dev
   - task: CMake@1
     inputs:
-      cmakeArgs: ".."
+      cmakeArgs: "-DCMAKE_C_COMPILER=/usr/bin/gcc-7 -DCMAKE_CXX_COMPILER=/usr/bin/g++-7 .."
   - task: CMake@1
     inputs:
       cmakeArgs: "--build ."
