Put built executable and libraries into their own folders; Talta -> 9fb58af

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,6 @@ add_subdirectory("${PROJECT_SOURCE_DIR}/deps/talta")
 
 add_subdirectory("${PROJECT_SOURCE_DIR}/deps/crossguid")
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED on)
-set(CMAKE_CXX_EXTENSIONS off)
-
 add_executable(altac
   "${PROJECT_SOURCE_DIR}/src/main.cpp"
   "${PROJECT_SOURCE_DIR}/src/printers.cpp"
@@ -22,3 +18,13 @@ target_link_libraries(altac PUBLIC altacore talta crossguid)
 
 # define the stdlib directory for debug builds
 target_compile_definitions(altac PRIVATE ALTA_DEBUG_STDLIB_PATH="${PROJECT_SOURCE_DIR}/stdlib")
+
+set_target_properties(altac
+  PROPERTIES
+  CXX_STANDARD 17
+  CXX_STANDARD_REQUIRED on
+  CXX_EXTENSIONS off
+  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+)
