--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ jobs:
   - task: PublishPipelineArtifact@0
     inputs:
       artifactName: "altac-linux-amd64"
-      targetPath: "build/altac"
+      targetPath: "build/bin"
 
 - job: Windows
   pool:
@@ -35,8 +35,8 @@ jobs:
       cmakeArgs: "--build ."
   - task: PublishPipelineArtifact@0
     inputs:
-      artifactName: "altac-win64.exe"
-      targetPath: "build/altac.exe"
+      artifactName: "altac-win64"
+      targetPath: "build/bin"
 
 - job: macOS
   pool:
@@ -51,4 +51,4 @@ jobs:
   - task: PublishPipelineArtifact@0
     inputs:
       artifactName: "altac-macos"
-      targetPath: "build/altac"
+      targetPath: "build/bin"
