--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,12 @@ jobs:
       cp -r stdlib "$(Build.ArtifactStagingDirectory)/lib/alta-stdlib"
     displayName: "Copy the standard library to artifact directory"
 
+  # copy runtime
+  - bash: |
+      mkdir -p "$(Build.ArtifactStagingDirectory)/lib"
+      cp -r runtime "$(Build.ArtifactStagingDirectory)/lib/alta-runtime"
+    displayName: "Copy the runtime to artifact directory"
+
   - task: ArchiveFiles@2
     condition: contains(variables['Build.SourceBranch'], 'refs/tags/')
     displayName: "Create a release archive"
@@ -120,6 +126,10 @@ jobs:
   - bash: cp -r stdlib "$(Build.ArtifactStagingDirectory)/stdlib"
     displayName: "Copy the standard library to artifact directory"
 
+  # copy runtime
+  - bash: cp -r runtime "$(Build.ArtifactStagingDirectory)/runtime"
+    displayName: "Copy the runtime to artifact directory"
+
   - task: ArchiveFiles@2
     condition: contains(variables['Build.SourceBranch'], 'refs/tags/')
     displayName: "Create a release archive"
@@ -180,6 +190,12 @@ jobs:
       mkdir -p "$(Build.ArtifactStagingDirectory)/lib"
       cp -r stdlib "$(Build.ArtifactStagingDirectory)/lib/alta-stdlib"
     displayName: "Copy the standard library to artifact directory"
+
+  # copy runtime
+  - bash: |
+      mkdir -p "$(Build.ArtifactStagingDirectory)/lib"
+      cp -r runtime "$(Build.ArtifactStagingDirectory)/lib/alta-runtime"
+    displayName: "Copy the runtime to artifact directory"
 
   - task: ArchiveFiles@2
     condition: contains(variables['Build.SourceBranch'], 'refs/tags/')
