Add the necessary project structure to create our own build tool
AMake will use the `manifest.json` file produced by altac to compile the project (and will automatically find compilers). It'll also produce a small CMakeLists for each target (rather than the mess used for each module right now) to allow easy integration into other projects;
This is also an exercise in using altac to build parts of itself and the same method will be used when writing the bootstrapped compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ project(alta)
 add_subdirectory("${PROJECT_SOURCE_DIR}/deps/talta" EXCLUDE_FROM_ALL)
 
 add_executable(altac
-  "${PROJECT_SOURCE_DIR}/src/main.cpp"
-  "${PROJECT_SOURCE_DIR}/src/printers.cpp"
-  "${PROJECT_SOURCE_DIR}/src/cli-parser.cpp"
+  "${PROJECT_SOURCE_DIR}/src/altac/main.cpp"
+  "${PROJECT_SOURCE_DIR}/src/altac/printers.cpp"
+  "${PROJECT_SOURCE_DIR}/src/altac/cli-parser.cpp"
 )
 target_include_directories(altac
   PRIVATE "${PROJECT_SOURCE_DIR}/include"
@@ -33,7 +33,26 @@ set_target_properties(altac
   RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
 )
 
-# install files
+FILE(GLOB_RECURSE AMAKE_SOURCES FOLLOW_SYMLINKS LIST_DIRECTORIES true ${PROJECT_BINARY_DIR}/*)
+
+# we use `runtime-override` and `stdlib-override` to ensure
+# the right paths are used in release builds
+add_custom_target(amake ALL
+  "$<TARGET_FILE:altac>" -c -g "${CMAKE_GENERATOR}" -o "${PROJECT_BINARY_DIR}/amake" -nw msvc-crt-secure --runtime-override "${PROJECT_SOURCE_DIR}/runtime" --stdlib-override "${PROJECT_SOURCE_DIR}/stdlib" "${PROJECT_SOURCE_DIR}/src/amake"
+  SOURCES ${AMAKE_SOURCES}
+)
+
+if (WIN32)
+  set(PLATFORM_EXECUTABLE_EXTENSION ".exe")
+else()
+  set(PLATFORM_EXECUTABLE_EXTENSION "")
+endif()
+
+add_custom_command(TARGET amake POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy "${PROJECT_BINARY_DIR}/amake/_build/bin/amake${PLATFORM_EXECUTABLE_EXTENSION}" "${CMAKE_BINARY_DIR}/bin/amake${PLATFORM_EXECUTABLE_EXTENSION}"
+)
+
+# install files for altac
 if (WIN32)
   install(TARGETS altac
     RUNTIME DESTINATION .
@@ -41,6 +60,19 @@ if (WIN32)
 else()
   install(TARGETS altac
     RUNTIME DESTINATION bin
+  )
+endif()
+
+set(AMAKE_EXECUTABLE "${CMAKE_BINARY_DIR}/bin/amake${PLATFORM_EXECUTABLE_EXTENSION}")
+
+# install files for amake
+if (WIN32)
+  install(PROGRAMS "${AMAKE_EXECUTABLE}"
+    DESTINATION .
+  )
+else()
+  install(PROGRAMS "${AMAKE_EXECUTABLE}"
+    DESTINATION bin
   )
 endif()
 
