--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,16 @@ target_include_directories(altac
   PRIVATE "${PROJECT_SOURCE_DIR}/deps/jsoncpp"
 )
 
+# credit to Austin Lasher (https://medium.com/@alasher/colored-c-compiler-output-with-ninja-clang-gcc-10bfe7f2b949)
+option(FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." TRUE)
+if(${FORCE_COLORED_OUTPUT})
+  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    target_compile_options(altac PRIVATE -fdiagnostics-color=always)
+  elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
+    target_compile_options(altac PRIVATE -fcolor-diagnostics)
+  endif()
+endif()
+
 target_link_libraries(altac PUBLIC altacore talta crossguid)
 
 # define the stdlib directory for debug builds
