--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,13 +16,13 @@ jobs:
     displayName: "Configure project with CMake (for release)"
     condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
     inputs:
-      cmakeArgs: "-DCMAKE_C_COMPILER=/usr/bin/gcc-7 -DCMAKE_CXX_COMPILER=/usr/bin/g++-7 -DCMAKE_BUILD_TYPE=Release .."
+      cmakeArgs: '-DCMAKE_C_COMPILER=/usr/bin/gcc-7 -DCMAKE_CXX_COMPILER=/usr/bin/g++-7 -DCMAKE_BUILD_TYPE=Release -DCPACK_OUTPUT_FILE_PREFIX="$(Build.ArtifactStagingDirectory)" ..'
   # otherwise, build for debug
   - task: CMake@1
     displayName: "Configure project with CMake (for debug)"
     condition: not(eq(variables['Build.SourceBranch'], 'refs/heads/release'))
     inputs:
-      cmakeArgs: "-DCMAKE_C_COMPILER=/usr/bin/gcc-7 -DCMAKE_CXX_COMPILER=/usr/bin/g++-7 -DCMAKE_BUILD_TYPE=Debug .."
+      cmakeArgs: '-DCMAKE_C_COMPILER=/usr/bin/gcc-7 -DCMAKE_CXX_COMPILER=/usr/bin/g++-7 -DCMAKE_BUILD_TYPE=Debug -DCPACK_OUTPUT_FILE_PREFIX="$(Build.ArtifactStagingDirectory)" ..'
 
    # build it
   - task: CMake@1
@@ -30,42 +30,12 @@ jobs:
     inputs:
       cmakeArgs: "--build ."
 
-  # copy the executable (and any related products)
-  - task: CopyFiles@2
-    displayName: "Copy the executable (and related files) to artifact directory"
-    inputs:
-      sourceFolder: "build/bin"
-      contents: "*"
-      targetFolder: '$(Build.ArtifactStagingDirectory)/bin'
-
-  # copy stdlib
-  - bash: |
-      mkdir -p "$(Build.ArtifactStagingDirectory)/lib"
-      cp -r stdlib "$(Build.ArtifactStagingDirectory)/lib/alta-stdlib"
-    displayName: "Copy the standard library to artifact directory"
-
-  # copy runtime
-  - bash: |
-      mkdir -p "$(Build.ArtifactStagingDirectory)/lib"
-      cp -r runtime "$(Build.ArtifactStagingDirectory)/lib/alta-runtime"
-    displayName: "Copy the runtime to artifact directory"
-
-  - task: ArchiveFiles@2
+  # package it
+  - task: CMake@1
+    displayName: "Package project"
     condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
-    displayName: "Create a release archive"
     inputs:
-      rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
-      includeRootFolder: false
-      archiveType: 'tar'
-      tarCompression: 'xz'
-      archiveFile: '$(Build.ArtifactStagingDirectory)/altac-linux-amd64.tar.xz'
-
-  - bash: |
-      shopt -s extglob
-      rm -r !(altac-linux-amd64.tar.xz)
-    workingDirectory: $(Build.ArtifactStagingDirectory)
-    condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
-    displayName: "Remove unnecessary files (for release)"
+      cmakeArgs: "--build . --target package"
 
   # publish the relevant artifacts
   - task: PublishPipelineArtifact@0
@@ -82,7 +52,7 @@ jobs:
   - task: CMake@1
     displayName: "Configure project with CMake"
     inputs:
-      cmakeArgs: ".."
+      cmakeArgs: '-DCPACK_OUTPUT_FILE_PREFIX="$(Build.ArtifactStagingDirectory)" ..'
 
   # if this is a tagged commit, build for release
   # note: Visual Studio requires the build configuration type at build time,
@@ -99,47 +69,17 @@ jobs:
     inputs:
       cmakeArgs: "--build . --config Debug"
 
-  # [debug] copy the executable (and any related products)
-  - task: CopyFiles@2
-    displayName: "Copy the executable (and related files) to artifact directory (for release)"
+  # package it
+  - task: CMake@1
+    displayName: "Package project (for release)"
+    condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
+    inputs:
+      cmakeArgs: "--build . --config Release --target package"
+  - task: CMake@1
+    displayName: "Package project (for debug)"
     condition: not(eq(variables['Build.SourceBranch'], 'refs/heads/release'))
     inputs:
-      sourceFolder: "build\\bin\\Debug"
-      contents: "*"
-      targetFolder: '$(Build.ArtifactStagingDirectory)'
-  # [release] copy the executable (and any related products)
-  - task: CopyFiles@2
-    displayName: "Copy the executable (and related files) to artifact directory (for release)"
-    condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
-    inputs:
-      sourceFolder: "build\\bin\\Release"
-      contents: "*"
-      targetFolder: '$(Build.ArtifactStagingDirectory)'
-
-  # copy stdlib
-  # hehe, windows has bash :)
-  - bash: cp -r stdlib "$(Build.ArtifactStagingDirectory)/stdlib"
-    displayName: "Copy the standard library to artifact directory"
-
-  # copy runtime
-  - bash: cp -r runtime "$(Build.ArtifactStagingDirectory)/runtime"
-    displayName: "Copy the runtime to artifact directory"
-
-  - task: ArchiveFiles@2
-    condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
-    displayName: "Create a release archive"
-    inputs:
-      rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
-      includeRootFolder: false
-      archiveType: 'zip'
-      archiveFile: '$(Build.ArtifactStagingDirectory)/altac-win64.zip'
-
-  - bash: |
-      shopt -s extglob
-      rm -r !(altac-win64.zip)
-    workingDirectory: $(Build.ArtifactStagingDirectory)
-    condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
-    displayName: "Remove unnecessary files (for release)"
+      cmakeArgs: "--build . --config Debug --target package"
 
   # publish the relevant artifacts
   - task: PublishPipelineArtifact@0
@@ -157,14 +97,14 @@ jobs:
     displayName: "Configure project with CMake (for release)"
     condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
     inputs:
-      cmakeArgs: "-DCMAKE_BUILD_TYPE=Release .."
+      cmakeArgs: '-DCMAKE_BUILD_TYPE=Release -DCPACK_OUTPUT_FILE_PREFIX="$(Build.ArtifactStagingDirectory)" ..'
 
   # otherwise, build for debug
   - task: CMake@1
     displayName: "Configure project with CMake (for debug)"
     condition: not(eq(variables['Build.SourceBranch'], 'refs/heads/release'))
     inputs:
-      cmakeArgs: "-DCMAKE_BUILD_TYPE=Debug .."
+      cmakeArgs: '-DCMAKE_BUILD_TYPE=Debug -DCPACK_OUTPUT_FILE_PREFIX="$(Build.ArtifactStagingDirectory)" ..'
 
   # build it
   - task: CMake@1
@@ -172,41 +112,11 @@ jobs:
     inputs:
       cmakeArgs: "--build ."
 
-  # copy the executable (and any related products)
-  - task: CopyFiles@2
-    displayName: "Copy the executable (and related files) to artifact directory"
+  # package it
+  - task: CMake@1
+    displayName: "Package project"
     inputs:
-      sourceFolder: "build/bin"
-      contents: "*"
-      targetFolder: '$(Build.ArtifactStagingDirectory)/bin'
-
-  # copy stdlib
-  - bash: |
-      mkdir -p "$(Build.ArtifactStagingDirectory)/lib"
-      cp -r stdlib "$(Build.ArtifactStagingDirectory)/lib/alta-stdlib"
-    displayName: "Copy the standard library to artifact directory"
-
-  # copy runtime
-  - bash: |
-      mkdir -p "$(Build.ArtifactStagingDirectory)/lib"
-      cp -r runtime "$(Build.ArtifactStagingDirectory)/lib/alta-runtime"
-    displayName: "Copy the runtime to artifact directory"
-
-  - task: ArchiveFiles@2
-    condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
-    displayName: "Create a release archive"
-    inputs:
-      rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
-      includeRootFolder: false
-      archiveType: 'zip'
-      archiveFile: '$(Build.ArtifactStagingDirectory)/altac-macos.zip'
-
-  - bash: |
-      shopt -s extglob
-      rm -r !(altac-macos.zip)
-    workingDirectory: $(Build.ArtifactStagingDirectory)
-    condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
-    displayName: "Remove unnecessary files (for release)"
+      cmakeArgs: "--build . --target package"
 
   # publish the relevant artificats
   - task: PublishPipelineArtifact@0
